--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "docker:start": "docker compose -f docker-compose.yaml up"
   },
   "dependencies": {
+    "@mojotech/json-type-validation": "^3.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
