--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "docker:start": "docker compose -f docker-compose.yaml up"
   },
   "dependencies": {
+    "highcharts": "^11.3.0",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
@@ -36,6 +38,7 @@
     "@storybook/test": "^7.6.7",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -52,6 +55,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
     "prettier": "^3.1.1",
+    "prettier-2": "npm:prettier@^2.8.8",
     "storybook": "^7.6.7",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
