--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start",
     "lint": "run-p lint:*",
     "lint:tsc": "tsc --noEmit",
-    "lint:prettier": "prettier . --check",
-    "lint:eslint": "eslint . --ext .ts,.tsx",
+    "lint:prettier": "prettier ./src --check",
+    "lint:eslint": "eslint ./src --ext .ts,.tsx",
     "fix": "run-s fix:*",
-    "fix:prettier": "prettier . --write",
-    "fix:eslint": "eslint . --ext .ts,.tsx --fix",
+    "fix:prettier": "prettier ./src --write",
+    "fix:eslint": "eslint ./src --ext .ts,.tsx --fix",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
