--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "docker:start": "docker compose -f docker-compose.yaml up"
   },
   "dependencies": {
-    "highcharts": "^11.3.0",
     "@mojotech/json-type-validation": "^3.1.0",
+    "clsx": "^2.1.0",
+    "highcharts": "^11.3.0",
     "highcharts-react-official": "^3.2.1",
     "next": "14.0.4",
     "react": "^18",
@@ -38,6 +39,7 @@
     "@storybook/test": "^7.6.7",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
